[gd_scene load_steps=6 format=2]

[ext_resource path="res://TacticalSpaceCombat/Assets/Assets.svg" type="Texture" id=1]
[ext_resource path="res://TacticalSpaceCombat/Ship/Rooms/Room.gd" type="Script" id=2]
[ext_resource path="res://TacticalSpaceCombat/UI/UIFeedback.tscn" type="PackedScene" id=3]

[sub_resource type="CircleShape2D" id=1]

[sub_resource type="RectangleShape2D" id=2]
resource_local_to_scene = true
extents = Vector2( 32, 32 )

[node name="Room" type="Area2D" groups=[
"room",
]]
script = ExtResource( 2 )

[node name="HitArea2D" type="Area2D" parent="."]
collision_layer = 0
collision_mask = 0

[node name="CollisionShape2D" type="CollisionShape2D" parent="HitArea2D"]
shape = SubResource( 1 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
shape = SubResource( 2 )

[node name="Feedback" parent="." instance=ExtResource( 3 )]
modulate = Color( 1, 0.709804, 0.439216, 1 )

[node name="SpriteType" type="Sprite" parent="."]
visible = false
modulate = Color( 0.890196, 0.411765, 0.337255, 1 )
texture = ExtResource( 1 )
region_enabled = true

[node name="SpriteTarget" type="Sprite" parent="."]
visible = false
modulate = Color( 0.45098, 0.152941, 0.360784, 1 )
texture = ExtResource( 1 )
region_enabled = true
region_rect = Rect2( 96, 384, 32, 32 )

[node name="1" type="Sprite" parent="SpriteTarget"]
visible = false
position = Vector2( 0, -16 )
texture = ExtResource( 1 )
region_enabled = true
region_rect = Rect2( 88, 384, 8, 8 )

[node name="2" type="Sprite" parent="SpriteTarget"]
visible = false
position = Vector2( 16, 0 )
texture = ExtResource( 1 )
region_enabled = true
region_rect = Rect2( 88, 392, 8, 8 )

[node name="3" type="Sprite" parent="SpriteTarget"]
visible = false
position = Vector2( 0, 16 )
texture = ExtResource( 1 )
region_enabled = true
region_rect = Rect2( 88, 400, 8, 8 )

[node name="4" type="Sprite" parent="SpriteTarget"]
visible = false
position = Vector2( -16, 0 )
texture = ExtResource( 1 )
region_enabled = true
region_rect = Rect2( 88, 408, 8, 8 )

[node name="ColorRectO2" type="ColorRect" parent="."]
margin_right = 40.0
margin_bottom = 40.0
mouse_filter = 2
color = Color( 0.690196, 0.188235, 0.360784, 0 )
__meta__ = {
"_edit_use_anchors_": false
}
